--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Thu, 04 Oct 2012.
+%% Created using Papers on Tue, 30 Oct 2012.
 %% http://mekentosj.com/papers/
 
 @article{Baddeley:2000to,
@@ -11,44 +11,35 @@ number = {3},
 pages = {283--322},
 rating = {0},
 date-added = {2012-05-29T18:55:50GMT+00:00},
-date-modified = {2012-10-04T17:41:09GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf},
-file = {{Baddeley--2000.pdf:/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/84517B79-4C59-42FF-A6E3-AD735D646120}}
+date-modified = {2012-10-25T21:12:18GMT+00:00},
 }
 
-@article{Bravington:2010vw,
+@techreport{Bravington:2010vw,
 author = {Bravington, M.V. and Hedley, Sharon L},
-title = {Antarctic minke whale abundance from the SPLINTR model: some reference dataset results and preferred estimates from the second and third circumpolar {IDCR/SOWER} surveys},
+title = {{Antarctic minke whale abundance from the SPLINTR model: some'reference'dataset results and'preferred'estimates from the second and third circumpolar IDCR/SOWER surveys}},
 year = {2010},
-journal = {Paper SC/62/IA12 presented to the IWC Scientific Committee},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2012-09-18T22:51:00GMT+00:00},
-url = {http://www.iwcoffice.org/_documents/sci_com/SC62docs/SC-62-IA12Rev.pdf},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf},
-file = {{Bravington--2010.pdf:/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/C6C86554-53D5-4A16-BE5A-B894AFD08CC5}}
+date-modified = {2012-10-14T16:30:37GMT+00:00},
 }
 
 @techreport{Bravington:2009vo,
 author = {Bravington, M.V. and Hedley, Sharon L},
-title = {Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model},
+title = {{Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model}},
 year = {2009},
-number = {SC/61/IA14},
-institution = {IWC Scientific Committee},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2012-09-18T22:51:00GMT+00:00},
+date-modified = {2012-10-14T16:30:55GMT+00:00},
+url = {http://www.iwcoffice.org/_documents/sci_com/sc61docs/SC-61-IA14.pdf},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf},
 file = {{Bravington--2009.pdf:/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/323A731F-7B00-4AAA-9BE4-96F18CCC428D}}
 }
 
 @book{Buckland:2004ts,
-author = {Buckland, Stephen T and Anderson, DR and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, L},
+author = {Buckland, Stephen T and Anderson, DR and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, Len},
 title = {{Advanced Distance Sampling}},
 publisher = {Oxford University Press},
 year = {2004},
@@ -60,7 +51,7 @@ uri = {\url{papers2://publication/uuid/1B0A4642-4BC9-4EDA-8F3B-E8C43E2221B9}}
 }
 
 @book{Buckland:2001vm,
-author = {Buckland, Stephen T and Anderson, DR and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, L},
+author = {Buckland, Stephen T and Anderson, DR and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, Len},
 title = {{Introduction to Distance Sampling}},
 publisher = {Oxford University Press},
 year = {2001},
@@ -81,10 +72,7 @@ pages = {59--80},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-09T20:12:20GMT+00:00},
-date-modified = {2012-09-18T22:49:24GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf},
-file = {{Candy-CCAMLR_Science-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/C3059294-39F2-44B8-84DE-BC66DA2C3835}}
+date-modified = {2012-10-26T17:10:04GMT+00:00},
 }
 
 @article{Cleveland:1979vd,
@@ -96,11 +84,11 @@ pages = {829--836},
 rating = {0},
 date-added = {2012-06-05T03:36:13GMT+00:00},
 date-modified = {2012-10-04T19:41:12GMT+00:00},
+url = {http://www.jstor.org/stable/10.2307/2286407},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf},
 file = {{Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/A6409608-C46C-440B-9851-8CF07599E25F}}
 }
-
 
 @book{cox1980point,
 author = {Cox, David R and Isham, V.},
@@ -130,6 +118,18 @@ abstract = {The paper deals with a number of problems of statistical analysis co
 },
 url = {http://www.jstor.org/stable/10.2307/2983950},
 uri = {\url{papers2://publication/uuid/2AD44FD2-9A1C-4343-849C-4E25844F5F4C}}
+}
+
+@book{Efron:1993tv,
+author = {Efron, Bradley and Tibshirani, Robert J},
+title = {{An Introduction to the Bootstrap}},
+publisher = {Chapman {\&} Hall/CRC},
+year = {1993},
+isbn = {9780412042317},
+language = {English},
+rating = {0},
+date-added = {2012-10-25T21:11:27GMT+00:00},
+date-modified = {2012-10-25T21:12:03GMT+00:00},
 }
 
 @article{Efron:1979ha,
@@ -178,7 +178,7 @@ publisher = {Chapman and Hall/CRC, London, UK},
 year = {2003},
 rating = {0},
 date-added = {2012-08-21T01:18:41GMT+00:00},
-date-modified = {2012-08-21T01:21:29GMT+00:00},
+date-modified = {2012-10-30T20:43:25GMT+00:00},
 uri = {\url{papers2://publication/uuid/43FAB644-EC5D-4525-A77A-00576E045BD0}}
 }
 
@@ -254,7 +254,7 @@ uri = {\url{papers2://publication/uuid/431310FD-EE0C-4EFF-BF51-19DE6D44A652}}
 }
 
 @article{Marques:2007vm,
-author = {Marques, Tiago A and Thomas, L and Fancy, SG and Buckland, Stephen T},
+author = {Marques, Tiago A and Thomas, Len and Fancy, SG and Buckland, Stephen T},
 title = {{Improving estimates of bird density using multiple-covariate distance sampling}},
 journal = {The Auk},
 year = {2007},
@@ -286,6 +286,32 @@ url = {http://books.google.com/books?id=h9kFH2_FfBkC&printsec=frontcover&dq=mccu
 uri = {\url{papers2://publication/uuid/1E03DBA3-F2EE-4807-AFFC-053B4E1396A0}}
 }
 
+@article{Miller:2012tm,
+author = {Miller, David Lawrence and Wood, Simon N},
+title = {{Finite area smoothing with generalized distance splines}},
+pages = {1--27},
+read = {Yes},
+rating = {0},
+date-added = {2012-10-30T20:28:53GMT+00:00},
+date-modified = {2012-10-30T20:43:22GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/Unknown/Miller.pdf},
+file = {{Miller.pdf:/Users/dill/Dropbox/Papers2/Unknown/Miller.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/D1DB0F02-6C2E-464E-AADD-097F06984A27}}
+}
+
+@article{Miller:wx,
+author = {Miller, David Lawrence and Jones, Esther and Matthiopoulos, J},
+title = {{Reliable spatial smoothing without edge effects}},
+pages = {1--8},
+read = {Yes},
+rating = {0},
+date-added = {2012-10-30T20:36:50GMT+00:00},
+date-modified = {2012-10-30T20:42:30GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/Unknown/Miller-1.pdf},
+file = {{Miller-1.pdf:/Users/dill/Dropbox/Papers2/Unknown/Miller-1.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/7C8EF69D-7597-4316-97B2-E948BC8EC41F}}
+}
+
 @article{Niemi:2010kx,
 author = {Niemi, Aki and Fern{\'a}ndez, Carmen},
 title = {{Bayesian Spatial Point Process Modeling of Line Transect Data}},
@@ -306,13 +332,12 @@ uri = {\url{papers2://publication/doi/10.1007/s13253-010-0024-8}}
 }
 
 @techreport{Petersen:2011vy,
-author = {Petersen, I K and MacKenzie, M and Rexstad, EA and Wisz, M S and Fox, A D},
+author = {Petersen, I K and MacKenzie, M L and Rexstad, E A and Wisz, M S and Fox, A D},
 title = {{Comparing pre- and post-construction distributions of long-tailed ducks Clangula hyemalis in and around the Nysted offshore wind farm, Denmark:
 a quasi-designed experiment accounting for imperfect detection, local surface features and autocorrelation}},
 year = {2011},
 number = {2011-1},
 month = sep,
-institution = {CREEM Technical Report},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-19T16:03:03GMT+00:00},
@@ -327,14 +352,13 @@ author = {Ramsay, T},
 title = {{Spline smoothing over difficult regions}},
 journal = {Journal of the Royal Statistical Society. Series B, Statistical Methodology},
 year = {2002},
+volume = {64},
+number = {2},
 pages = {307--319},
 read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:47:43GMT+00:00},
-date-modified = {2012-10-02T22:02:21GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf},
-file = {{Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/0AB944B6-72CC-4119-93DB-EB36FEB64C45}}
+date-modified = {2012-10-09T17:35:29GMT+00:00},
 }
 
 @article{Rue:2009tw,
@@ -355,6 +379,18 @@ file = {{Rue-J._R._Statist._Soc._B-2009.pdf:/Users/dill/Dropbox/Papers2/2009/Rue
 uri = {\url{papers2://publication/uuid/C2352D3E-B0A8-45F7-BD65-E4EC4990D929}}
 }
 
+@article{ScottHayward:2011tc,
+author = {Scott-Hayward, L A S and MacKenzie, M L and Donovan, C R and Walker, C G and Ashe, E},
+title = {{Complex Region Spatial Smoother (CReSS)}},
+url = {http://research-repositoryst-andrewsacuk/handle/10023/2048},
+pages = {1--31},
+affiliation = {University of St Andrews},
+read = {Yes},
+rating = {0},
+date-added = {2012-06-05T03:37:06GMT+00:00},
+date-modified = {2012-10-30T20:43:04GMT+00:00},
+}
+
 @book{Seber:2002ti,
 author = {Seber, G A F},
 title = {{The Estimation of Animal Abundance and Related Parameters}},
@@ -367,7 +403,6 @@ rating = {0},
 date-added = {2012-05-29T19:06:01GMT+00:00},
 date-modified = {2012-09-18T23:04:50GMT+00:00},
 abstract = {Originally published in 1982, this reprint of the second edition of The Estimation of Animal Abundance and Related Parameters has been described as the "bible" of the field.},
-uri = {\url{papers2://publication/uuid/8BEB690D-5749-411B-8CAC-901EB9E6606C}}
 }
 
 @article{Skaug:2006gs,
@@ -391,7 +426,7 @@ uri = {\url{papers2://publication/doi/10.1007/s10651-005-0006-0}}
 }
 
 @article{Thomas:2010cf,
-author = {Thomas, Len and Buckland, Stephen T and Rexstad, Eric A and Laake, Jeffrey L and Strindberg, Samantha and Hedley, Sharon L and Bishop, Jon RB and Marques, Tiago A and Burnham, Kenneth P},
+author = {Thomas, Len and Buckland, Stephen T and Rexstad, E A and Laake, Jeffrey L and Strindberg, Samantha and Hedley, Sharon L and Bishop, Jon RB and Marques, Tiago A and Burnham, Kenneth P},
 title = {{Distance software: design and analysis of distance sampling surveys for estimating population size}},
 journal = {Journal of Applied Ecology},
 year = {2010},
@@ -402,7 +437,7 @@ doi = {10.1111/j.1365-2664.2009.01737.x},
 read = {Yes},
 rating = {0},
 date-added = {2010-07-14T20:18:23GMT+00:00},
-date-modified = {2012-10-04T15:13:21GMT+00:00},
+date-modified = {2012-10-17T18:34:14GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf},
 file = {{Thomas-Journal_of_Applied_Ecology-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2009.01737.x}}
@@ -420,6 +455,8 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:49:42GMT+00:00},
 date-modified = {2012-09-18T23:05:13GMT+00:00},
+abstract = {Praise for the Second Edition "This book has never had a competitor. It is the only book that takes a broad approach to sampling . . . any good personal statistics library should include a copy of this book." --Technometrics "Well-written . . . an excellent book on an important subject. Highly recommended." --Choice "An ideal reference for scientific researchers and other professionals who use sampling." --Zentralblatt Math Features new developments in the field combined with all aspects of obtaining, interpreting, and using sample data Sampling provides an up-to-date treatment of both classical and modern sampling design and estimation methods, along with sampling methods for rare, clustered, and hard-to-detect populations. This Third Edition retains the general organization of the two previous editions, but incorporates extensive new material--sections, exercises, and examples--throughout. Inside, readers will find all-new approaches to explain the various techniques in the book; new figures to assist in better visualizing and comprehending underlying concepts such as the different sampling strategies; computing notes for sample selection, calculation of estimates, and simulations; and more. Organized into six sections, the book covers basic sampling, from simple random to unequal probability sampling; the use of auxiliary data with ratio and regression estimation; sufficient data, model, and design in practical sampling; useful designs such as stratified, cluster and systematic, multistage, double and network sampling; detectability methods for elusive populations; spatial sampling; and adaptive sampling designs. Featuring a broad range of topics, Sampling, Third Edition serves as a valuable reference on useful sampling and estimation methods for researchers in various fields of study, including biostatistics, ecology, and the health sciences. The book is also ideal for courses on statistical sampling at the upper-undergraduate and graduate levels.},
+url = {http://books.google.com/books?id=qukULxJ--QAC&printsec=frontcover&dq=intitle:sampling+inauthor:thompson&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/F844F284-F8FD-45EB-B547-941C0530D788}}
 }
 
@@ -470,7 +507,7 @@ pages = {1},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:33:18GMT+00:00},
-date-modified = {2012-09-18T23:05:30GMT+00:00},
+date-modified = {2012-10-14T16:28:11GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf},
 file = {{Williams--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/20D0DB21-3CAF-4B76-AE38-663AC0ED1433}}
@@ -487,7 +524,7 @@ pages = {931--955},
 read = {Yes},
 rating = {0},
 date-added = {2010-03-23T20:11:51GMT+00:00},
-date-modified = {2012-10-02T20:59:54GMT+00:00},
+date-modified = {2012-10-28T13:52:23GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf},
 file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/8326BCA7-727A-494B-8BAD-11AC5255B783}}
@@ -501,7 +538,7 @@ year = {2006},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T17:55:29GMT+00:00},
-date-modified = {2012-10-02T21:06:31GMT+00:00},
+date-modified = {2012-10-28T13:52:43GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf},
 file = {{Wood--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/0F51C4D6-4E84-4A13-933F-42596D681835}}
